Backed out 4 changesets (bug 1916693, bug 1916682) for causing dt failures  browser_cubic-bezier-01.js CLOSED TREE
Backed out changeset 88101123c872 (bug 1916682)
Backed out changeset 185f7ddba4e1 (bug 1916682)
Backed out changeset a7f8831aaae7 (bug 1916693)
Backed out changeset 300625eeb1ad (bug 1916693)

UltraBlame original commit: 29ed6e40f66d4d3a568cdc0d46e05fced24e5fe3

--- a/devtools/client/shared/widgets/cubic-bezier.css
+++ b/devtools/client/shared/widgets/cubic-bezier.css
@@ -92,151 +92,9 @@ bezier
 -
 container
 {
-/
-*
-These
-should
-be
-kept
-in
-pixels
-as
-they
-'
-re
-used
-in
-CubicBezierWidget
-.
-js
-to
-set
-the
-canvas
-size
-*
-/
--
--
-bezier
--
-curve
--
-width
-:
-150px
-;
--
--
-bezier
--
-curve
--
-height
-:
-330px
-;
--
--
-bezier
--
-preview
--
-height
-:
-40px
-;
--
--
-bezier
--
-tooltip
--
-container
--
-height
-:
-calc
-(
-var
-(
--
--
-bezier
--
-curve
--
-height
-)
-+
-var
-(
--
--
-bezier
--
-preview
--
-height
-)
-)
-;
 display
 :
-grid
-;
-grid
--
-template
--
-areas
-:
-"
-presets
-curve
-"
-"
-presets
-preview
-"
-;
-grid
--
-template
--
-columns
-:
-50
-%
-50
-%
-;
-grid
--
-template
--
-rows
-:
-var
-(
--
--
-bezier
--
-curve
--
-height
-)
-var
-(
--
--
-bezier
--
-preview
--
-height
-)
+flex
 ;
 width
 :
@@ -244,18 +102,15 @@ width
 ;
 height
 :
-var
-(
+370px
+;
+flex
 -
+direction
+:
+row
 -
-bezier
--
-tooltip
--
-container
--
-height
-)
+reverse
 ;
 overflow
 :
@@ -273,70 +128,27 @@ border
 -
 box
 ;
-.
-preset
--
-pane
-{
-grid
--
-area
-:
-presets
-;
-border
--
-inline
--
-end
-:
-1px
-solid
-var
-(
--
--
-theme
--
-splitter
--
-color
-)
-;
-padding
--
-inline
--
-end
-:
-4px
-;
-/
-*
-Visual
-balance
-for
-the
-panel
--
-arrowcontent
-border
-on
-inline
-start
-*
-/
 }
+.
+cubic
+-
+bezier
+-
+container
 .
 display
 -
 wrap
 {
-grid
--
-area
+width
 :
-curve
+50
+%
+;
+height
+:
+100
+%
 ;
 text
 -
@@ -348,33 +160,6 @@ overflow
 :
 hidden
 ;
-}
-.
-timing
--
-function
--
-preview
-{
-grid
--
-area
-:
-preview
-;
-align
--
-self
-:
-center
-;
-justify
--
-self
-:
-center
-;
-}
 }
 /
 *
@@ -395,31 +180,11 @@ plane
 {
 width
 :
-var
-(
--
--
-bezier
--
-curve
--
-width
-)
+150px
 ;
 height
 :
-var
-(
--
--
-bezier
--
-tooltip
--
-container
--
-height
-)
+370px
 ;
 margin
 :
@@ -466,20 +231,8 @@ border
 ;
 background
 :
-var
-(
--
--
-timing
--
-function
--
-control
--
-point
--
-background
-)
+#
+666
 ;
 display
 :
@@ -512,74 +265,6 @@ cursor
 :
 pointer
 ;
-/
-*
-opt
--
-out
-of
-forced
-colors
-as
--
--
-timing
--
-function
--
-control
--
-point
--
-background
-is
-a
-registered
-property
-so
-the
-engine
-will
-compute
-it
-to
-an
-rgb
-color
-which
-means
-it
-won
-'
-t
-be
-seen
-as
-a
-system
-color
-in
-High
-Contrast
-Mode
-and
-a
-default
-color
-would
-be
-used
-.
-*
-/
-forced
--
-color
--
-adjust
-:
-none
-;
 }
 .
 cubic
@@ -606,9 +291,7 @@ var
 (
 -
 -
-timing
--
-function
+bezier
 -
 grid
 -
@@ -619,9 +302,7 @@ var
 (
 -
 -
-timing
--
-function
+bezier
 -
 grid
 -
@@ -648,9 +329,7 @@ var
 (
 -
 -
-timing
--
-function
+bezier
 -
 grid
 -
@@ -661,9 +340,7 @@ var
 (
 -
 -
-timing
--
-function
+bezier
 -
 grid
 -
@@ -692,106 +369,102 @@ size
 100
 %
 ;
+background
+-
+position
+:
+-
+2px
+5px
+-
+2px
+5px
+;
 user
 -
 select
 :
 none
 ;
-:
-root
-[
-forced
--
-colors
--
-active
-]
-&
-{
-/
-*
-opt
--
-out
-of
-forced
-colors
-so
-we
-can
-see
-still
-the
-lines
-in
-High
-Contrast
-Mode
+}
 .
+cubic
 -
+bezier
 -
-timing
--
-function
--
-grid
--
-color
-does
-have
-a
-specific
-value
-in
-HCM
-so
-it
-should
-be
-fine
-*
-/
-forced
--
-color
--
-adjust
-:
-none
-;
-/
-*
-And
-set
-the
-forced
-colors
-on
-children
-so
-High
-Contrast
-Mode
-behaves
-as
-expected
-*
-/
-&
->
-*
+container
+canvas
+.
+curve
 {
-forced
+background
+:
+linear
+-
+gradient
+(
+-
+45deg
+transparent
+49
+.
+7
+%
+var
+(
+-
+-
+bezier
+-
+diagonal
 -
 color
+)
+49
+.
+7
+%
+var
+(
 -
-adjust
-:
-auto
+-
+bezier
+-
+diagonal
+-
+color
+)
+50
+.
+3
+%
+transparent
+50
+.
+3
+%
+)
+center
+no
+-
+repeat
 ;
-}
-}
+background
+-
+size
+:
+100
+%
+100
+%
+;
+background
+-
+position
+:
+0
+0
+;
 }
 /
 *
@@ -814,76 +487,22 @@ function
 -
 preview
 {
+position
+:
+absolute
+;
+bottom
+:
+20px
+;
+right
+:
+45px
+;
 width
 :
-var
-(
--
--
-bezier
--
-curve
--
-width
-)
+150px
 ;
-/
-*
-Stack
-the
-line
-and
-the
-dot
-on
-top
-of
-each
-other
-*
-/
-display
-:
-grid
-;
-align
--
-items
-:
-center
-;
-justify
--
-items
-:
-center
-;
-:
-is
-(
-.
-scale
-.
-dot
-)
-{
-grid
--
-column
-:
-1
-/
-1
-;
-grid
--
-row
-:
-1
-/
-1
-;
-}
 }
 .
 cubic
@@ -900,59 +519,36 @@ preview
 .
 scale
 {
+position
+:
+absolute
+;
+top
+:
+6px
+;
+left
+:
+0
+;
+z
+-
+index
+:
+1
+;
 width
 :
-100
-%
+150px
 ;
 height
 :
 1px
 ;
 background
--
-color
 :
-var
-(
--
--
-timing
--
-function
--
-preview
--
-scale
-)
-;
-/
-*
-opt
--
-out
-of
-forced
-colors
-so
-we
-can
-see
-the
-line
-in
-High
-Contrast
-Mode
-*
-/
-forced
--
-color
--
-adjust
-:
-none
+#
+ccc
 ;
 }
 .
@@ -970,6 +566,25 @@ preview
 .
 dot
 {
+position
+:
+absolute
+;
+top
+:
+0
+;
+left
+:
+-
+7px
+;
+z
+-
+index
+:
+2
+;
 width
 :
 10px
@@ -989,72 +604,12 @@ border
 :
 2px
 solid
-var
-(
--
--
-timing
--
-function
--
-preview
--
-dot
--
-border
-)
+white
 ;
 background
 :
-var
-(
--
--
-timing
--
-function
--
-line
--
-color
-)
-;
-/
-*
-opt
--
-out
-of
-forced
-colors
-as
--
--
-timing
--
-function
--
-line
--
-color
-is
-using
-a
-non
-system
-but
-high
-contrast
-color
-*
-/
-forced
--
-color
--
-adjust
-:
-none
+#
+4C9ED9
 ;
 }
 /
@@ -1063,6 +618,66 @@ Preset
 Widget
 *
 /
+.
+cubic
+-
+bezier
+-
+container
+.
+preset
+-
+pane
+{
+width
+:
+50
+%
+;
+height
+:
+100
+%
+;
+border
+-
+right
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+padding
+-
+right
+:
+4px
+;
+/
+*
+Visual
+balance
+for
+the
+panel
+-
+arrowcontent
+border
+on
+the
+left
+*
+/
+}
 #
 preset
 -
@@ -1121,6 +736,24 @@ auto
 auto
 ;
 }
+#
+preset
+-
+categories
+.
+category
+:
+last
+-
+child
+{
+border
+-
+right
+:
+none
+;
+}
 .
 cubic
 -
@@ -1156,9 +789,7 @@ capitalize
 ;
 border
 -
-inline
--
-end
+right
 :
 1px
 solid
@@ -1200,21 +831,6 @@ overflow
 :
 hidden
 ;
-&
-:
-last
--
-child
-{
-border
--
-inline
--
-end
-:
-none
-;
-}
 }
 .
 cubic
