--- a/devtools/client/shared/widgets/linear-widget.css
+++ b/devtools/client/shared/widgets/linear-widget.css
@@ -70,10 +70,6 @@ height
 100
 %
 ;
-direction
-:
-ltr
-;
 }
 .
 linear
@@ -185,9 +181,7 @@ var
 (
 -
 -
-timing
--
-function
+bezier
 -
 grid
 -
@@ -225,18 +219,8 @@ stroke
 ;
 stroke
 :
-var
-(
--
--
-timing
--
-function
--
-line
--
-color
-)
+#
+4C9ED9
 ;
 }
 .
@@ -268,20 +252,45 @@ var
 (
 -
 -
-timing
+grey
 -
-function
--
-control
--
-point
--
-background
+55
 )
 ;
 cursor
 :
 pointer
+;
+}
+:
+root
+.
+theme
+-
+dark
+.
+linear
+-
+easing
+-
+function
+-
+container
+.
+control
+-
+point
+{
+fill
+:
+var
+(
+-
+-
+grey
+-
+20
+)
 ;
 }
 /
@@ -340,13 +349,11 @@ var
 (
 -
 -
-timing
+bezier
 -
-function
+grid
 -
-preview
--
-scale
+color
 )
 45
 %
@@ -354,13 +361,11 @@ var
 (
 -
 -
-timing
+bezier
 -
-function
+grid
 -
-preview
--
-scale
+color
 )
 55
 %
@@ -368,33 +373,6 @@ transparent
 55
 %
 )
-;
-/
-*
-opt
--
-out
-of
-forced
-colors
-so
-we
-can
-see
-the
-"
-line
-"
-gradient
-*
-/
-forced
--
-color
--
-adjust
-:
-none
 ;
 }
 .
@@ -455,109 +433,11 @@ border
 :
 2px
 solid
-var
-(
--
--
-timing
--
-function
--
-preview
--
-dot
--
-border
-)
+white
 ;
 background
 :
-var
-(
--
--
-timing
--
-function
--
-line
--
-color
-)
-;
-/
-*
-We
-need
-to
-opt
--
-out
-of
-forced
-color
-as
--
--
-timing
--
-function
--
-line
--
-color
-is
-a
-registered
-color
-and
-gets
-computed
-to
-an
-rgb
-color
-which
-means
-the
-color
-will
-be
-forced
-even
-if
-the
-declaration
-value
-is
-a
-system
-color
-.
-All
-the
-colors
-used
-here
-have
-High
-Contrast
-re
--
-declaration
-so
-it
-should
-be
-fine
-*
-/
-forced
--
-color
--
-adjust
-:
-none
+#
+4C9ED9
 ;
 }
