Bug 1923753 - Update empty and error state assets for sidebar and firefox view r=sidebar-reviewers,fxview-reviewers,kcochrane,desktop-theme-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226906

UltraBlame original commit: c50735abb95bbccca12b60b8b04eeb9bef7e12b4

--- a/browser/components/firefoxview/firefoxview.css
+++ b/browser/components/firefoxview/firefoxview.css
@@ -1361,6 +1361,8 @@ fxview
 empty
 -
 state
+{
+&
 :
 not
 (
@@ -1387,4 +1389,106 @@ start
 :
 0
 ;
+}
+/
+*
+these
+illustrations
+need
+a
+larger
+width
+otherwise
+they
+look
+too
+small
+*
+/
+&
+.
+synced
+-
+tabs
+:
+:
+part
+(
+image
+-
+container
+)
+{
+min
+-
+width
+:
+250px
+;
+}
+/
+*
+center
+align
+the
+empty
+state
+image
+*
+/
+&
+.
+recentlyclosed
+:
+:
+part
+(
+image
+-
+container
+)
+{
+margin
+-
+inline
+-
+start
+:
+50px
+;
+}
+/
+*
+align
+empty
+state
+text
+with
+synced
+tabs
+on
+recent
+browsing
+page
+*
+/
+&
+.
+recentlyclosed
+:
+:
+part
+(
+main
+)
+{
+padding
+-
+inline
+-
+start
+:
+50px
+;
+}
 }
