--- a/browser/components/sidebar/sidebar.css
+++ b/browser/components/sidebar/sidebar.css
@@ -678,4 +678,79 @@ color
 )
 ;
 }
+&
+:
+:
+part
+(
+image
+-
+container
+)
+{
+min
+-
+width
+:
+auto
+;
+width
+:
+100
+%
+;
+max
+-
+width
+:
+250px
+;
+}
+/
+*
+these
+illustrations
+need
+a
+larger
+width
+otherwise
+they
+look
+too
+small
+*
+/
+&
+.
+synced
+-
+tabs
+:
+:
+part
+(
+image
+-
+container
+)
+{
+min
+-
+width
+:
+auto
+;
+width
+:
+100
+%
+;
+max
+-
+width
+:
+350px
+;
+}
 }
