Bug 1916693 - [devtools] Use/rename variables for shared colors between cubic bezier and linear widgets. r=devtools-reviewers,ochameau.
Differential Revision: https://phabricator.services.mozilla.com/D227172

UltraBlame original commit: e614cd67523130797ff35873e13ab50b95c51b7f

--- a/devtools/client/shared/widgets/cubic-bezier.css
+++ b/devtools/client/shared/widgets/cubic-bezier.css
@@ -231,8 +231,20 @@ border
 ;
 background
 :
-#
-666
+var
+(
+-
+-
+timing
+-
+function
+-
+control
+-
+point
+-
+background
+)
 ;
 display
 :
@@ -291,7 +303,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -302,7 +316,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -329,7 +345,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -340,7 +358,9 @@ var
 (
 -
 -
-bezier
+timing
+-
+function
 -
 grid
 -
@@ -546,9 +566,21 @@ height
 1px
 ;
 background
+-
+color
 :
-#
-ccc
+var
+(
+-
+-
+timing
+-
+function
+-
+preview
+-
+scale
+)
 ;
 }
 .
@@ -604,12 +636,35 @@ border
 :
 2px
 solid
-white
+var
+(
+-
+-
+timing
+-
+function
+-
+preview
+-
+dot
+-
+border
+)
 ;
 background
 :
-#
-4C9ED9
+var
+(
+-
+-
+timing
+-
+function
+-
+line
+-
+color
+)
 ;
 }
 /
