Bug 1922020, part 10 - Remove reliance on window.opener storage access heuristic in user.js from layout/base/tests/test_zoom_restore_bfcache.html - r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D224815

UltraBlame original commit: 37af765882cb6fc8c858f94b16a2fc708ed6ca2b

--- a/layout/base/tests/test_zoom_restore_bfcache.html
+++ b/layout/base/tests/test_zoom_restore_bfcache.html
@@ -97,6 +97,19 @@ waitForExplicitFinish
 (
 )
 ;
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+.
+then
+(
+(
+)
+=
+>
+{
 /
 *
 *
@@ -1090,6 +1103,9 @@ _blank
 '
 noopener
 '
+)
+;
+}
 )
 ;
 }
