Backed out changeset fc9cb1d32e78 (bug 1851327) for causing bc failures  browser_readerMode_textLayoutPref.js CLOSED TREE
UltraBlame original commit: 2d56061eb886ad6c984764932d011258fb6e8ba3

--- a/toolkit/themes/shared/aboutReader.css
+++ b/toolkit/themes/shared/aboutReader.css
@@ -257,6 +257,8 @@ font
 -
 family
 :
+Helvetica
+Arial
 sans
 -
 serif
@@ -2474,6 +2476,8 @@ font
 -
 family
 :
+Helvetica
+Arial
 sans
 -
 serif
@@ -2487,6 +2491,12 @@ font
 -
 family
 :
+Georgia
+"
+Times
+New
+Roman
+"
 serif
 ;
 }
@@ -2810,6 +2820,8 @@ font
 -
 family
 :
+Helvetica
+Arial
 sans
 -
 serif
@@ -5405,6 +5417,8 @@ font
 -
 family
 :
+Helvetica
+Arial
 sans
 -
 serif
@@ -5479,6 +5493,12 @@ font
 -
 family
 :
+Georgia
+"
+Times
+New
+Roman
+"
 serif
 ;
 background
