Bug 1918490 - Move support link element outside of label element. r=reusable-components-reviewers,accessibility-frontend-reviewers,desktop-theme-reviewers,hjones,nlapre
The motivation for this change is to improve the screen reader user
experience when navigating through moz-checkbox and moz-radio elements.
When a screen reader encounters and focuses a moz-checkbox or
moz-radio element, only the label is announced. Previously the label
and the support-link element would be announced which is confusing since
it is not clear what will happen when activating one of these moz
elements.

Differential Revision: https://phabricator.services.mozilla.com/D226181

UltraBlame original commit: 2064995033ce1548c9149db5318275c17b87a901

--- a/toolkit/content/widgets/moz-input-common.css
+++ b/toolkit/content/widgets/moz-input-common.css
@@ -211,30 +211,6 @@ offset
 )
 ;
 }
-label
-{
-display
-:
-block
-;
-padding
--
-inline
--
-start
-:
-var
-(
--
--
-input
--
-space
--
-offset
-)
-;
-}
 #
 input
 {
@@ -378,16 +354,6 @@ adjust
 ;
 }
 .
-label
--
-content
-{
-position
-:
-relative
-;
-}
-.
 icon
 {
 position
@@ -494,9 +460,46 @@ small
 }
 }
 .
+label
+-
+content
+{
+position
+:
+relative
+;
+}
+.
 description
 {
 margin
+-
+inline
+-
+start
+:
+var
+(
+-
+-
+input
+-
+space
+-
+offset
+)
+;
+}
+.
+label
+-
+wrapper
+{
+display
+:
+block
+;
+padding
 -
 inline
 -
