Bug 1921184 - Align HomeFragment display toolbar with BrowserFragment display toolbar. r=android-reviewers,skhan
Differential Revision: https://phabricator.services.mozilla.com/D227527

UltraBlame original commit: 7fe6502757b67f0930974edf17c7cf02e0baedcd

--- a/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
+++ b/mobile/android/fenix/app/src/main/res/layout/fragment_home.xml
@@ -1505,7 +1505,7 @@ android
 layout_width
 =
 "
-36dp
+48dp
 "
 android
 :
@@ -1513,6 +1513,13 @@ layout_height
 =
 "
 48dp
+"
+android
+:
+layout_marginEnd
+=
+"
+16dp
 "
 app
 :
