Bug 1927404 - Make each line in view-source a <span> rather than a <pre>. r=hsivonen
Differential Revision: https://phabricator.services.mozilla.com/D227061

UltraBlame original commit: 8b5961223d9472c00d3b6f449583c3c6c16703c0

--- a/layout/style/res/viewsource.css
+++ b/layout/style/res/viewsource.css
@@ -206,21 +206,23 @@ space
 :
 inherit
 ;
-margin
-:
-0
-0
-0
-5ch
-;
 }
-pre
+span
 [
 id
 ]
+{
+display
 :
+block
+;
+margin
+-
+left
 :
-before
+5ch
+;
+}
 span
 [
 id
@@ -261,10 +263,9 @@ width
 5ch
 ;
 margin
+-
+left
 :
-0
-0
-0
 -
 5ch
 ;
@@ -546,17 +547,5 @@ unicode
 bidi
 :
 embed
-;
-}
-span
-[
-id
-]
-{
-unicode
--
-bidi
-:
-isolate
 ;
 }
