Bug 1922020, part 12  - Remove reliance on window.opener storage access heuristic in user.js from toolkit/components/extensions/test/mochitest/ - r=robwu
Differential Revision: https://phabricator.services.mozilla.com/D224817

UltraBlame original commit: 43f97ae7eb6fa42be258ccdfc0dfc27808d255be

--- a/toolkit/components/extensions/test/mochitest/test_ext_subframes_privileges.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_subframes_privileges.html
@@ -1536,6 +1536,38 @@ test_webext_background_remote_subframe_privileges
 {
 /
 /
+we
+have
+to
+enable
+unpartitioned
+cookie
+access
+for
+xorigin
+tests
+to
+set
+the
+cookie
+/
+/
+where
+the
+popup
+can
+read
+it
+.
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
+/
+/
 file_remote_frame
 .
 html
