--- a/toolkit/components/extensions/test/mochitest/test_ext_webrequest_redirect_bypass_cors.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webrequest_redirect_bypass_cors.html
@@ -241,26 +241,10 @@ works
 as
 expected
 await
-SpecialPowers
+SimpleTest
 .
-pushPrefEnv
+enableLegacyUnpartitionedStorage
 (
-{
-set
-:
-[
-[
-"
-privacy
-.
-partition
-.
-always_partition_third_party_non_cookie_storage
-"
-false
-]
-]
-}
 )
 ;
 let
