Bug 1922020, part 14 - Remove reliance on window.opener storage access heuristic in user.js from toolkit/components/windowwatcher/test/test_storage_copied.html - r=asuth
Differential Revision: https://phabricator.services.mozilla.com/D224819

UltraBlame original commit: 23e201efd3b8f184d12375eb6423d7a4e450350b

--- a/toolkit/components/windowwatcher/test/test_storage_copied.html
+++ b/toolkit/components/windowwatcher/test/test_storage_copied.html
@@ -7,6 +7,31 @@ HTML
 html
 >
 <
+!
+-
+-
+Test
+sessionStorage
+is
+copied
+over
+when
+a
+new
+window
+opens
+to
+the
+same
+domain
+as
+the
+opener
+.
+-
+-
+>
+<
 head
 >
 <
@@ -171,6 +196,13 @@ function
 (
 )
 {
+await
+SimpleTest
+.
+enableLegacyUnpartitionedStorage
+(
+)
+;
 const
 TEST_VALUE
 =
