Bug 1916721 - [devtools] Turn computed panel matched declarations borders solid in High Contrast Mode. r=devtools-reviewers,bomsy.
Differential Revision: https://phabricator.services.mozilla.com/D227365

UltraBlame original commit: e58de289c028e28d3ea818983f663bc46529eb8e

--- a/devtools/client/themes/computed.css
+++ b/devtools/client/themes/computed.css
@@ -1313,6 +1313,37 @@ width
 0
 1px
 ;
+/
+*
+Make
+the
+border
+more
+visible
+in
+High
+Contrast
+Mode
+*
+/
+:
+root
+[
+forced
+-
+colors
+-
+active
+]
+&
+{
+border
+-
+style
+:
+solid
+;
+}
 }
 .
 matchedselectors
