Backed out 10 changesets (bug 1928672, bug 1922020) for causing bc failures browser_permissionPropagation.js. CLOSED TREE
Backed out changeset 48e75896365c (bug 1928672)
Backed out changeset efa4047d526e (bug 1922020)
Backed out changeset 3df5f4781f39 (bug 1922020)
Backed out changeset 23e201efd3b8 (bug 1922020)
Backed out changeset 4c05fa56cf47 (bug 1922020)
Backed out changeset 43f97ae7eb6f (bug 1922020)
Backed out changeset 5e14c27894de (bug 1922020)
Backed out changeset cf506f71a542 (bug 1922020)
Backed out changeset e034708dee92 (bug 1922020)
Backed out changeset 787a649b70b8 (bug 1922020)

UltraBlame original commit: 59f7ecb621e3d2feabe3ff9bc2d292222a5a612e

--- a/toolkit/components/extensions/test/mochitest/test_ext_webrequest_redirect_bypass_cors.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_webrequest_redirect_bypass_cors.html
@@ -241,10 +241,26 @@ works
 as
 expected
 await
-SimpleTest
+SpecialPowers
 .
-enableLegacyUnpartitionedStorage
+pushPrefEnv
 (
+{
+set
+:
+[
+[
+"
+privacy
+.
+partition
+.
+always_partition_third_party_non_cookie_storage
+"
+false
+]
+]
+}
 )
 ;
 let
