Bug 1894239: Enable MOZ_SELECTABLE_PROFILES by default. r=jhirsch,omc-reviewers,niklas,emcminn,mconley
This also removes some tests of `MOZ_SELECTABLE_PROFILES` from `browser/components/profiles` files
where the test is pointless because that test is excluded from the build if `MOZ_SELECTABLE_PROFILES`
is unset.

Differential Revision: https://phabricator.services.mozilla.com/D227372

UltraBlame original commit: 1010637933649517852c195605f4878555039ebe

--- a/browser/components/profiles/content/profiles-theme-card.css
+++ b/browser/components/profiles/content/profiles-theme-card.css
@@ -368,6 +368,8 @@ small
 ;
 border
 -
+inline
+-
 width
 :
 var
@@ -385,7 +387,30 @@ width
 ;
 border
 -
-top
+block
+-
+end
+-
+width
+:
+var
+(
+-
+-
+theme
+-
+card
+-
+border
+-
+width
+)
+;
+border
+-
+block
+-
+start
 :
 var
 (
