Backed out changeset 101063793364 (bug 1894239) for causing mochitests failures in browser_sentence_case_strings.js. CLOSED TREE
UltraBlame original commit: f5165c23ed7098bd116d5a7d49f847cfdc63d3fb

--- a/browser/components/profiles/content/profiles-theme-card.css
+++ b/browser/components/profiles/content/profiles-theme-card.css
@@ -368,8 +368,6 @@ small
 ;
 border
 -
-inline
--
 width
 :
 var
@@ -387,30 +385,7 @@ width
 ;
 border
 -
-block
--
-end
--
-width
-:
-var
-(
--
--
-theme
--
-card
--
-border
--
-width
-)
-;
-border
--
-block
--
-start
+top
 :
 var
 (
