Backed out 4 changesets (bug 1927404) - for causing dt failures on browser_command_line_urls.js.
Backed out changeset 57e3626aa048 (bug 1927404)
Backed out changeset 0ee04fe4a1bc (bug 1927404)
Backed out changeset 1e68482cff47 (bug 1927404)
Backed out changeset 8b5961223d94 (bug 1927404)

UltraBlame original commit: 63b6a5a732ea0fcd7ba031c5adc6a4c1f3520755

--- a/layout/style/res/viewsource.css
+++ b/layout/style/res/viewsource.css
@@ -206,23 +206,21 @@ space
 :
 inherit
 ;
-}
-span
-[
-id
-]
-{
-display
-:
-block
-;
 margin
--
-left
 :
+0
+0
+0
 5ch
 ;
 }
+pre
+[
+id
+]
+:
+:
+before
 span
 [
 id
@@ -263,9 +261,10 @@ width
 5ch
 ;
 margin
--
-left
 :
+0
+0
+0
 -
 5ch
 ;
@@ -547,5 +546,17 @@ unicode
 bidi
 :
 embed
+;
+}
+span
+[
+id
+]
+{
+unicode
+-
+bidi
+:
+isolate
 ;
 }
