--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -3086,14 +3086,27 @@ events
 :
 none
 ;
-opacity
+&
 :
-0
-.
-5
-!
-important
+:
+before
+{
+fill
+:
+var
+(
+-
+-
+theme
+-
+icon
+-
+disabled
+-
+color
+)
 ;
+}
 }
 .
 devtools
